# SlougtHouse

./: .gitignore  CLAUDE.md
.claude/: settings.local.json
.github/workflows/: firmware.yml  ios.yml  simulator.yml
.watchdog/: flag_rate_limit.sh  watchdog.sh
agents/: alex_kim.md  catherine_standish.md  david_reyes.md  dr_elena_vasquez.md  dr_ingrid_wolff.md  kai_muller.md  leo_hart.md  mara_de_vries.md  marcus_bell.md  oliver_quinn.md  priya_nair.md  sara_chen.md  tom_voss.md  yusuf_okafor.md
intel/: interfaces.md  mission.md  roster.md
intel/personnel/: catherine_standish.md  david_reyes.md  dr_elena_vasquez.md  kai_muller.md  priya_nair.md  sara_chen.md  tom_voss.md
intel/reports/: 2026-05-08_company_status.md  2026-05-08_competitor_analysis.md  competitor_analysis_report.html
operations/: log.md
operations/design/: website_usecases.html
operations/devops/: ci_cd_overview.md
operations/docs/: ble_api_reference_001.md  user_manual_001.md
operations/firmware/main/: CMakeLists.txt  config.h  data_blocks.h  main.c  pool_alloc.c  pool_alloc.h  psram_buffer.c  psram_buffer.h
operations/firmware/main/tasks/: ecg_analysis.c  ecg_analysis.h  icg_analysis.c  icg_analysis.h  task_adc.c  task_adc.h  task_battery_monitor.c  task_battery_monitor.h  task_ble_stream.c  task_ble_stream.h  task_block_assembler.c  task_block_assembler.h  task_har.c  task_har.h  task_i2c_sensors.c  task_i2c_sensors.h  task_imu.c  task_imu.h  task_sad.c  task_sad.h  task_sd_writer.c  task_sd_writer.h  task_usb_guard.c  task_usb_guard.h  task_watchdog.c  task_watchdog.h
(+140 files in other folders)
